[package]
name = "costroid-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local log parsers and provider interfaces for Claude Code, Codex, and Cursor AI-tool usage data."
documentation = "https://docs.rs/costroid-providers"
keywords = ["finops", "cost", "claude", "codex", "cursor"]
categories = ["parser-implementations", "command-line-utilities"]

[dependencies]
chrono.workspace = true
costroid-focus.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
