[package]
name = "costroid-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Local log parsers and provider interfaces for Claude Code, Codex, and Cursor AI-tool usage data."
documentation = "https://docs.rs/costroid-providers"
keywords = ["finops", "cost", "claude", "codex", "cursor"]
categories = ["parser-implementations", "command-line-utilities"]

[dependencies]
chrono.workspace = true
# CSV reader for the FOCUS-import seam (`focus_import`, M1) — parse-only of a foreign
# FOCUS export. Permissive (Unlicense OR MIT), no network; already in the workspace
# (costroid-focus uses it to WRITE the export). No new offline-gate BFS node.
csv.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
