[package]
name = "costroid-store"
version.workspace = true
edition.workspace = true
# Inherits the workspace MSRV (1.88). rusqlite 0.37 with the `bundled` SQLite C
# amalgamation (libsqlite3-sys 0.35) compiles clean on 1.88 (M0 spike + the T9 MSRV
# gate). The ⛔ Readiness gate reserves the right for this crate to declare its OWN
# higher `rust-version` later if a heavyweight store dependency ever demands it — but
# the store is behind the CLI's off-by-default `store` feature, so it is never reachable
# from the 1.88 default CLI/bar/server graph.
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Costroid's local SQLite usage store: a metadata-only (R4 Cardinal Rule) persistent ledger of FOCUS usage rows, structurally incapable of holding prompt/response content."
documentation = "https://docs.rs/costroid-store"
keywords = ["finops", "sqlite", "store", "focus", "ai"]
categories = ["database", "command-line-utilities"]
# Published as a crates.io LIBRARY (M6 T9 / D3 — the store path has landed). No dist archives:
# it is a library, consumed locally behind the CLI's off-by-default `store` feature. Its place
# in the publish ladder is `… → store → power → costroid → …` (RELEASING.md); a topo-sort test
# guards that order against this dep graph (store depends only on costroid-focus).
publish = true

[dependencies]
# The FOCUS record types the store persists (metadata-only allowlist) and replays (T11).
costroid-focus.workspace = true
# The local SQLite store — bundled C amalgamation, MSRV-1.88 clean, all-permissive deps.
# NOT reachable from the default CLI/bar/server graph (behind the off-by-default `store`
# feature). DuckDB was rejected at M0; SQLite is locked. NO costroid-core dep — the
# replay-aggregate + export round-trip is driven by the caller (apps/cli), so the store
# stays a costroid-focus(+chrono+rust_decimal) leaf and core never depends on it.
rusqlite.workspace = true
thiserror.workspace = true
# T11 replay: reconstructing a `FocusRecord` from the persisted columns parses the RFC 3339
# timestamp back to a `DateTime<Utc>` (chrono) and the decimal-string costs/token counts back
# to `rust_decimal::Decimal` (exact decimal, never a float). Both are permissive (Apache-2.0/
# MIT) and now in the runtime graph for the reconstruction path — still behind the CLI's
# off-by-default `store` feature, so never in the default CLI/bar/server graph.
chrono.workspace = true
rust_decimal.workspace = true

[lints]
workspace = true
